# chat

./: README.md
chatProject/: CMakeLists.txt
chatProject/include/: public  public.hpp
chatProject/include/server/: UserModel.hpp  chatService.hpp  chatserver.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlineMessagemodel.hpp  user.hpp
chatProject/include/server/db/: db.h
chatProject/include/server/redis/: redis.hpp
chatProject/src/: CMakeLists.txt
chatProject/src/client/: CMakeLists.txt  main.cpp
chatProject/src/server/: CMakeLists.txt  UserModel.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlineMessageModel.cpp  server.cpp
chatProject/src/server/database/: db.cpp
